--- a/build.gradle
+++ b/build.gradle
@@ -22,19 +22,22 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0'
 	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	implementation 'com.neovisionaries:nv-i18n:1.29'
 	implementation 'org.springframework.data:spring-data-rest-core:4.1.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+	implementation('org.hibernate:hibernate-core:6.0.2.Final')
+	implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
 }
 
 tasks.named('test') {
